tests/paczka1/fuzzy1/38405444.err
Error in line 3: yAxYGdGKg6 S450 -2,8
Error in line 1: yAxYGdGKg6 S450 24,9
Error in line 5: 8ag83jiQ A567 67,9
Error in line 4: ptAsmjX A146 17,8
Error in line 13: 1nUjphXas A146 4,8
Error in line 21: 1nUjphXas S450 53,9
Error in line 25: 1nUjphXas S212 14,5
Error in line 24: ptAsmjX S212 77,0
